# flexible-graphrag

./: .gitignore  CHANGELOG.md  README.md  dot-env-sample.txt  env-sample.txt  pytest.ini  test-document.txt
docker/: DOCKER-README.md  README.md  docker-compose.yaml
docker/config/: kibana.yml
docker/includes/: alfresco.yaml  (+10 more)
docs/: ENVIRONMENT-CONFIGURATION.md  Neo4j-URLs.md  SCHEMA-EXAMPLES.md  SOURCE-PATH-EXAMPLES.md  TIMEOUT-CONFIGURATIONS.md  VECTOR-DIMENSIONS.md
flexible-graphrag/: Dockerfile  README-cmis.md  README-neo4j.md  README.md  backend.py  cmis-graphrag.py  cmis_util.py  config.py  document_processor.py  dot-env-sample.txt  env-sample.txt  factories.py  hybrid_system.py  install.py  main.py  neo4j_util.py  requirements.txt  sources.py  start.py
flexible-graphrag-mcp/: QUICK-USAGE-GUIDE.md  README.md  fastmcp-server.py  main.py  pyproject.toml  requirements.txt  test-http-mode.py  test-installation.ps1  test-installation.sh
flexible-graphrag-mcp/claude-desktop-configs/macos/: pipx-config.json  uvx-config.json
flexible-graphrag-mcp/claude-desktop-configs/windows/: pipx-config.json  uvx-config.json
flexible-graphrag-mcp/mcp-inspector/: pipx-http-config.json  pipx-stdio-config.json  uvx-http-config.json  uvx-stdio-config.json
sample-docs/: cmispress.txt  excel-2plus2.xlsx  space-station.txt  word-hello-world.docx
scripts/: README.md  create_opensearch_pipeline.py  setup-opensearch-pipeline.bat  setup-opensearch-pipeline.sh
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_basic.py  test_bm25_config.py  test_bm25_integration.py
(+69 files in other folders)
